--- a/src/Components/CatDesc/CatDesc.scss
+++ b/src/Components/CatDesc/CatDesc.scss
@@ -6,6 +6,7 @@
     .box{
         height: auto;
         border: 2px solid white;
+        max-width: 100%;
         margin: 10px;
         padding: 12px;
         border-radius: 12px;
