--- a/src/Components/Main/Catagory/Catagory.scss
+++ b/src/Components/Main/Catagory/Catagory.scss
@@ -1,5 +1,5 @@
 .Catagory{
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.9);
     display: flex;
