--- a/src/Components/MoviePage/MoviePage.scss
+++ b/src/Components/MoviePage/MoviePage.scss
@@ -1,3 +1,141 @@
 .MoviePage{
     display: flex;
+    background-color: var(--secondary-color);
+    min-height: 100vh;
+    .Content{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+        .Main{
+            height: 50%;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            margin: 50px;
+            .Description{
+                flex-direction: column;
+                color: wheat;
+                border: 2px solid white;
+                display: flex;
+                justify-content: center;
+                border-radius: 12px;
+                height: 80%;
+                width:50%;
+                padding: 50px;
+                .star{
+                    margin: 2px;
+                    font-size: 20px;
+                }
+                h1{
+                    margin:0px 0px 0px 0px;
+                }
+                h2{
+                    font-size: 50px;
+                    margin: 0px 0px 10px 0px;
+                }
+                h5{
+                    opacity: 0.5;
+                }
+                p{
+                    margin:12px 0px;
+                }
+            }
+            img{
+                width:300px;
+                height: 80%;
+                border-radius: 25px;
+                border: 2px solid var(--primary-color);
+            }
+
+        }
+        .Recommend{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 50%;
+            h1{
+                color: var(--primary-color);
+                font-size: 40px;
+            }
+            .Cards{
+                display: flex;
+                flex-wrap: wrap;
+                .Card{
+                    .Image{
+                        img{
+                            height: 200px;
+                        }
+                    }
+                }
+            }
+            .Cards>*{
+                margin: 30px;
+            }
+        }
+    }
+
+}
+
+@media screen  and (max-width:1350px){
+    .MoviePage{
+        flex-direction: column;
+        .SideNav{
+            height: auto;
+            width: auto;
+            h1{
+                font-size: 40px;
+            }
+            .line{
+                display: none;
+            }
+            .catgry{
+                flex-direction: row;
+                flex-wrap: wrap;
+                margin: 10px 0px;
+                h3{
+                    padding: 15px 15px 15px 15px;
+                    margin-right: 12px;
+                }
+            }
+            .catgry>*{
+                margin: 5px;
+            }
+        }
+        .Content{
+            .Main{
+                .Description{
+                    h2{
+                        font-size: 35px;
+                    }
+                    h1{
+                        font-size: 25px;
+                    }
+                }
+                img{
+                    width: 250px;
+                    height: 60%;
+                }
+            }
+        }
+    }
+}
+
+@media screen  and (max-width:700px){
+    .MoviePage{
+        .Content{
+            .Main{
+                flex-direction: column;
+                img{
+                    margin: 30px;
+                }
+                .Description{
+                    padding: 25px;
+                    width: 80%;
+                }
+            }
+        }
+    }
 }
