--- a/src/Components/CatDesc/CatDesc.scss
+++ b/src/Components/CatDesc/CatDesc.scss
@@ -25,11 +25,25 @@
             }
         }
     }
-    // input{
-    //     padding: 12px;
-    //     width: 500px;
-    //     margin: 8px;
-    //     height: 50px;
-    //     border-radius: 12px;
-    // }
+}
+
+@media screen and (max-width:1300px) {
+    .CatDesc{
+        .box{
+            padding: 8px;
+            h1{
+                font-size: 70px;
+            }
+        }
+    }
+}
+@media screen and (max-width:500px) {
+    .CatDesc{
+        .box{
+            padding: 8px;
+            h1{
+                font-size: 70px;
+            }
+        }
+    }
 }
