--- a/src/Components/Main/Catagory/Catagory.scss
+++ b/src/Components/Main/Catagory/Catagory.scss
@@ -20,7 +20,7 @@
         flex-wrap: wrap;
         margin: 20px;
         gap: 2rem; 
-        div{
+        #link{
             h1{
                 color: white;
                 transition: all 1s ease;
