--- a/src/Components/MoviePage/MoviePage.scss
+++ b/src/Components/MoviePage/MoviePage.scss
@@ -8,45 +8,72 @@
         width: 100%;
         flex-direction: column;
         .Main{
-            height: 50%;
             width: 100%;
+            height: 40%;
             display: flex;
             align-items: center;
             justify-content: space-around;
             margin: 50px;
             .Description{
-                flex-direction: column;
-                color: wheat;
-                border: 2px solid white;
+                color:var(--primary-color);
                 display: flex;
                 justify-content: center;
                 border-radius: 12px;
-                height: 80%;
-                width:50%;
-                padding: 50px;
-                .star{
-                    margin: 2px;
-                    font-size: 20px;
+                height: 100%;
+                width:70%;
+                border: 2px solid white;
+                padding: 30px;
+                #left{
+                    width: 100%;
+                    margin: 12px;
+                    h2{
+                        font-size: 35px;
+                    }
+                    p{
+                        
+                        span{
+                            opacity: 0.5;
+                        }
+                    }
+                }   
+                #left>*{
+                    margin: 12px;
                 }
-                h1{
-                    margin:0px 0px 0px 0px;
+                #right{
+                    width: 100%;
+                    margin: 12px;
+                    p{
+                        opacity: 0.6;
+                    }
                 }
-                h2{
-                    font-size: 50px;
-                    margin: 0px 0px 10px 0px;
+                #right>*{
+                    margin: 12px;
                 }
-                h5{
-                    opacity: 0.5;
-                }
-                p{
-                    margin:12px 0px;
-                }
+                
             }
-            img{
-                width:300px;
-                height: 80%;
-                border-radius: 25px;
-                border: 2px solid var(--primary-color);
+            a{
+                width:250px;
+                position: relative;
+                #play{
+                    position: absolute;
+                    top: 35%;
+                    left: 30%;
+                    font-size: 100px;
+                    color: var(--primary-color);
+                    display: none;
+                }
+                img{
+                    height: 90%;
+                    width: 100%;
+                }
+                &:hover img{
+                    opacity: 0.6;
+                    transition: all 0.2s linear;
+                    border: 1px solid var(--primary-color);
+                }
+                &:hover  #play{
+                    display: block;
+                }
             }
 
         }
@@ -79,12 +106,28 @@
 
 }
 
+@media screen  and (max-width:1650px){
+    .MoviePage{
+        .Content{
+            .Main{
+                .Description{
+                    #left{
+                        h2{
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media screen  and (max-width:1350px){
     .MoviePage{
         flex-direction: column;
         .SideNav{
             height: auto;
-            width: auto;
+            width: 90%;
             h1{
                 font-size: 40px;
             }
@@ -106,35 +149,52 @@
         }
         .Content{
             .Main{
+                flex-direction: column;
+
                 .Description{
-                    h2{
-                        font-size: 35px;
+                    flex-direction: column;
+                    #right{
+                        padding: 0px;
                     }
-                    h1{
-                        font-size: 25px;
+                    #left{
+                        padding: 0px;
+                        h2{
+                            font-size: 20px;
+                        }
                     }
                 }
                 img{
-                    width: 250px;
+                    width: 200px;
                     height: 60%;
+                    margin: 25px;
+                }
+            }
+            .Recommend{
+                h1{
+                    font-size: 30px;
                 }
             }
         }
     }
 }
 
-@media screen  and (max-width:700px){
+@media screen  and (max-width:800px){
     .MoviePage{
         .Content{
             .Main{
                 flex-direction: column;
                 img{
-                    margin: 30px;
+                    margin:30px 0px;
                 }
                 .Description{
                     padding: 25px;
                     width: 80%;
                 }
+            }
+        }
+        .Recommend{
+            h1{
+                font-size: 20px;
             }
         }
     }
