--- a/src/Components/Preloader/Preloader.css
+++ b/src/Components/Preloader/Preloader.css
@@ -1,7 +1,7 @@
 .Preloader{
     height: 100vh;
     width: 100wh;
-    background-color:white;
+    background-color:black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +15,7 @@
     border-radius: 100%;
     background-color:transparent;
     border: 2px solid grey;
-    border-top:2px solid black;
+    border-top:2px solid red;
     animation-name: spin;
     animation-duration: 1s;
     animation-iteration-count: infinite;
