--- a/src/Components/SideNav/SideNav.scss
+++ b/src/Components/SideNav/SideNav.scss
@@ -11,6 +11,7 @@
     box-shadow: 0px 0px 10px white;
     color: var(--primary-color);
     h1{
+        color: var(--primary-color);
         span{
             color: var(--tertiary-color);
         }
@@ -68,7 +69,7 @@
     }
 }
 
-@media screen and (max-width:700px){
+@media screen and (max-width:800px){
     .SideNav{
         height: auto;
         width: auto;
